bindings/haskell/cbits/panproto_glue.h

int32_t pp_mig_coverage_at(
    uint32_t migration,
    uint32_t src,
    uint32_t tgt,
    const uint8_t *instances_ptr,
    size_t instances_len,
    Vec_uint8_t *out
);
int32_t pp_mig_lift_json_at(
    uint32_t migration,
    const uint8_t *json_ptr,
    size_t json_len,
    const uint8_t *root_vertex_ptr,
    size_t root_vertex_len,
    Vec_uint8_t *out
);
/* ---------- hom ---------- */

int32_t pp_hom_find_morphisms_at(
    uint32_t src,
    uint32_t tgt,
    const uint8_t *opts_ptr,
    size_t opts_len,
    Vec_uint8_t *out
);
int32_t pp_hom_find_best_morphism_at(
    uint32_t src,
    uint32_t tgt,
    const uint8_t *opts_ptr,
    size_t opts_len,
    Vec_uint8_t *out
);
int32_t pp_hom_morphism_to_migration_at(
    const uint8_t *morphism_ptr,
    size_t morphism_len,
    uint32_t *out_handle
);
int32_t pp_hom_induce_schema_morphism_at(
    const uint8_t *theory_morphism_ptr,
    size_t theory_morphism_len,
    uint32_t src,
    Vec_uint8_t *out
);
int32_t pp_hom_induce_migration_from_theory_at(
    const uint8_t *theory_morphism_ptr,
    size_t theory_morphism_len,
    uint32_t src,
    uint32_t tgt,
    Vec_uint8_t *out,
    uint32_t *out_handle
);
/* ---------- instance ---------- */

int32_t pp_inst_validate_at(
    uint32_t schema_handle,
    const uint8_t *instance_ptr,
    size_t instance_len,
    Vec_uint8_t *out
);
int32_t pp_inst_to_json_at(
    uint32_t schema_handle,
    const uint8_t *instance_ptr,
    size_t instance_len,
    Vec_uint8_t *out
);
int32_t pp_inst_json_to_instance_at(
    uint32_t schema_handle,
    const uint8_t *json_ptr,
    size_t json_len,
    const uint8_t *root_vertex_ptr,
    size_t root_vertex_len,
    Vec_uint8_t *out
);
int32_t pp_inst_element_count_at(
    const uint8_t *instance_ptr,
    size_t instance_len,
    uint32_t *out_count
);
/* ---------- registry ---------- */

int32_t pp_io_parse_instance_at(
    uint32_t registry,
    const uint8_t *proto_name_ptr,
    size_t proto_name_len,
    uint32_t schema_handle,
    const uint8_t *input_ptr,
    size_t input_len,
    Vec_uint8_t *out
);
int32_t pp_io_emit_instance_at(
    uint32_t registry,
    const uint8_t *proto_name_ptr,
    size_t proto_name_len,
    uint32_t schema_handle,
    const uint8_t *instance_ptr,
    size_t instance_len,
    Vec_uint8_t *out
);
int32_t pp_registry_get_builtin_at(
    const uint8_t *name_ptr,
    size_t name_len,
    Vec_uint8_t *out
);
/* ---------- lens ---------- */

int32_t pp_lens_auto_generate_protolens_at(
    uint32_t schema1,
    uint32_t schema2,
    const uint8_t *stringency_ptr,
    size_t stringency_len,
    uint32_t *out_handle
);
int32_t pp_lens_auto_generate_candidates_at(
    uint32_t schema1,
    uint32_t schema2,
    uint32_t top_n,
    const uint8_t *stringency_ptr,
    size_t stringency_len,
    Vec_uint8_t *out
);
int32_t pp_lens_check_laws_at(
    uint32_t migration,
    const uint8_t *instance_ptr,
    size_t instance_len,
    Vec_uint8_t *out
);
int32_t pp_lens_check_get_put_at(
    uint32_t migration,
    const uint8_t *instance_ptr,
    size_t instance_len,
    Vec_uint8_t *out
);
int32_t pp_lens_check_put_get_at(
    uint32_t migration,
    const uint8_t *instance_ptr,
    size_t instance_len,
    Vec_uint8_t *out
);
int32_t pp_lens_get_record_at(
    uint32_t migration,
    const uint8_t *record_ptr,
    size_t record_len,
    Vec_uint8_t *out
);
int32_t pp_lens_put_record_at(
    uint32_t migration,
    const uint8_t *view_ptr,
    size_t view_len,
    const uint8_t *complement_ptr,
    size_t complement_len,
    Vec_uint8_t *out
);
int32_t pp_protolens_complement_spec_at(
    uint32_t chain,
    uint32_t schema,
    Vec_uint8_t *out
);
int32_t pp_protolens_from_diff_at(
    const uint8_t *diff_ptr,
    size_t diff_len,
    uint32_t schema1,
    uint32_t schema2,
    uint32_t *out_handle
);
int32_t pp_protolens_from_json_at(
    const uint8_t *json_ptr,
    size_t json_len,
    uint32_t *out_handle
);
int32_t pp_lens_symmetric_sync_at(
    uint32_t sym_lens,
    const uint8_t *view_ptr,
    size_t view_len,
    const uint8_t *complement_ptr,
    size_t complement_len,
    uint8_t direction,
    Vec_uint8_t *out
);
int32_t pp_lens_compile_document_at(
    const uint8_t *source_ptr,
    size_t source_len,
    const uint8_t *format_ptr,
    size_t format_len,
    const uint8_t *body_vertex_ptr,
    size_t body_vertex_len,
    uint32_t *out_handle
);
/* ---------- gat ---------- */

int32_t pp_gat_create_theory_at(
    const uint8_t *spec_ptr,
    size_t spec_len,
    uint32_t *out_handle
);
int32_t pp_gat_check_morphism_at(
    const uint8_t *morphism_ptr,
    size_t morphism_len,
    uint32_t domain,
    uint32_t codomain,
    Vec_uint8_t *out
);
int32_t pp_gat_migrate_model_at(
    const uint8_t *model_ptr,
    size_t model_len,
    const uint8_t *morphism_ptr,
    size_t morphism_len,
    Vec_uint8_t *out
);
int32_t pp_gat_free_model_at(
    uint32_t theory,
    const uint8_t *config_ptr,
    size_t config_len,
    uint32_t *out_handle
);
int32_t pp_gat_eval_in_model_at(
    uint32_t model,
    const uint8_t *op_name_ptr,
    size_t op_name_len,
    const uint8_t *args_ptr,
    size_t args_len,
    Vec_uint8_t *out
);
/* ---------- expr ---------- */

int32_t pp_expr_parse_at(
    const uint8_t *source_ptr,
    size_t source_len,
    Vec_uint8_t *out
);
int32_t pp_expr_eval_func_at(
    const uint8_t *expr_ptr,
    size_t expr_len,
    const uint8_t *env_ptr,
    size_t env_len,
    Vec_uint8_t *out
);
int32_t pp_expr_eval_gat_at(
    const uint8_t *expr_ptr,
    size_t expr_len,
    const uint8_t *env_ptr,
    size_t env_len,
    uint32_t theory,
    Vec_uint8_t *out
);
int32_t pp_expr_check_at(
    const uint8_t *expr_ptr,
    size_t expr_len,
    uint32_t theory,
    const uint8_t *context_ptr,
    size_t context_len,
    Vec_uint8_t *out
);
int32_t pp_query_execute_at(
    const uint8_t *query_ptr,
    size_t query_len,
    const uint8_t *instance_ptr,
    size_t instance_len,
    uint32_t schema_handle,
    Vec_uint8_t *out
);