bindings/haskell/cbits/panproto.h

/** \brief
 *  Same as [`Vec<T>`][`rust::Vec`], but with guaranteed `#[repr(C)]` layout
 */
typedef struct Vec_uint8 {
    /** <No documentation available> */
    uint8_t * ptr;

    /** <No documentation available> */
    size_t len;

    /** <No documentation available> */
    size_t cap;
} Vec_uint8_t;
/** \brief
 *  Check a model against a theory, returning equation violations.
 *
 *  `model` is a [`Resource::Model`] handle; `theory` is a
 *  [`Resource::Theory`] handle. On success, `out` receives a
 *  CBOR-encoded `Vec<String>` of violation descriptions (the `Debug`
 *  rendering of each `gat::EquationViolation`), empty when the model
 *  satisfies every equation. A satisfied and a violated model both
 *  return [`PpStatus::Ok`]; the verdict lives in the payload.
 *
 *  Returns [`PpStatus::InvalidHandle`] / [`PpStatus::TypeMismatch`] for a
 *  bad handle, and [`PpStatus::Operation`] when checking itself fails (a
 *  missing carrier set, or an assignment count that exceeds the engine
 *  bound). Calls `gat::check_model`.
 */
int32_t
pp_gat_check_model (
    uint32_t model,
    uint32_t theory,
    Vec_uint8_t * out);
/** \brief
 *  Compute the colimit of two theories over a shared base.
 *
 *  `t1`, `t2`, and `shared` are [`Resource::Theory`] handles. On
 *  success, `out_handle` receives a fresh [`Resource::Theory`] handle
 *  holding `gat::colimit_by_name(t1, t2, shared)`.
 *
 *  Returns [`PpStatus::InvalidHandle`] / [`PpStatus::TypeMismatch`] if a
 *  handle is invalid or not a theory, and [`PpStatus::Operation`] if the
 *  colimit fails.
 */
int32_t
pp_gat_colimit (
    uint32_t t1,
    uint32_t t2,
    uint32_t shared,
    uint32_t * out_handle);
/** \brief
 *  Emit a model's full carrier: its sort-interpretation map.
 *
 *  `model` is a [`Resource::Model`] handle. On success, `out` receives
 *  the CBOR-encoded `HashMap<String, Vec<ModelValue>>` of the model's
 *  `sort_interp`: each sort name mapped to its carrier set. This is the
 *  extractable data half of a model (the operation interpretations stay
 *  in-process); paired with [`pp_gat_eval_in_model`], a handle-held model
 *  is both evaluable and its carrier serializable.
 *
 *  Returns [`PpStatus::InvalidHandle`] / [`PpStatus::TypeMismatch`] for a
 *  bad model handle.
 */
int32_t
pp_gat_model_sort_interp (
    uint32_t model,
    Vec_uint8_t * out);
/** \brief
 *  Serialize the theory behind a handle to CBOR.
 *
 *  `theory` is a [`Resource::Theory`] handle. On success, `out` receives
 *  the CBOR-encoded [`gat::Theory`] in the same shape
 *  [`pp_gat_create_theory`] decodes, so an engine-produced theory (a
 *  colimit result, for instance) can be reified by the host and fed back
 *  in.
 *
 *  Returns [`PpStatus::InvalidHandle`] / [`PpStatus::TypeMismatch`] for a
 *  bad handle.
 */
int32_t
pp_gat_serialize_theory (
    uint32_t theory,
    Vec_uint8_t * out);
/** \brief
 *  List all protocol names registered in an I/O registry.
 *
 *  `registry` is a [`Resource::IoRegistry`](crate::handle::Resource)
 *  handle. On success, `out` receives a CBOR-encoded `Vec<String>`. Calls
 *  `ProtocolRegistry::protocol_names`.
 *
 *  Returns [`PpStatus::InvalidHandle`] / [`PpStatus::TypeMismatch`] if the
 *  handle is invalid or not an I/O registry.
 */
int32_t
pp_io_list_protocols (
    uint32_t registry,
    Vec_uint8_t * out);
/** \brief
 *  Create an I/O protocol registry with all built-in protocol codecs.
 *
 *  On success, `out_handle` receives a fresh
 *  [`Resource::IoRegistry`](crate::handle::Resource) handle holding
 *  `io::default_registry()` and [`PpStatus::Ok`] is returned.
 */
int32_t
pp_io_register_protocols (
    uint32_t * out_handle);
/** \brief
 *  Compose two lenses sequentially.
 *
 *  `l1` and `l2` are migration/lens handles. On success, `out_handle`
 *  receives a fresh
 *  [`Resource::MigrationWithSchemas`](crate::handle::Resource) handle.
 *  Calls `lens::compose`.
 */
int32_t
pp_lens_compose (
    uint32_t l1,
    uint32_t l2,
    uint32_t * out_handle);
/** \brief
 *  Auto-generate a symmetric lens from two schemas.
 *
 *  `schema1` and `schema2` are
 *  [`Resource::Schema`](crate::handle::Resource) handles. On success,
 *  `out_handle` receives a fresh
 *  [`Resource::SymmetricLensHandle`](crate::handle::Resource) handle.
 *  Calls `SymmetricLens::auto_symmetric`.
 */
int32_t
pp_lens_symmetric_from_schemas (
    uint32_t schema1,
    uint32_t schema2,
    uint32_t * out_handle);
/** \brief
 *  Serialize a protolens chain to JSON.
 *
 *  `chain` is a protolens chain handle. On success, `out` receives JSON
 *  bytes describing each step (name, endofunctors, lossless flag) per
 *  [`ProtolensStepInfo`].
 */
int32_t
pp_protolens_chain_to_json (
    uint32_t chain,
    Vec_uint8_t * out);
/** \brief
 *  Compose two protolens chains.
 *
 *  `chain1` and `chain2` are protolens chain handles. On success,
 *  `out_handle` receives a fresh
 *  [`Resource::ProtolensChain`](crate::handle::Resource) handle holding
 *  the concatenated steps.
 */
int32_t
pp_protolens_compose (
    uint32_t chain1,
    uint32_t chain2,
    uint32_t * out_handle);
/** \brief
 *  Fuse a protolens chain into a single composite step.
 *
 *  `chain` is a protolens chain handle. On success, `out_handle`
 *  receives a fresh
 *  [`Resource::ProtolensChain`](crate::handle::Resource) handle holding
 *  the fused step. Calls `ProtolensChain::fuse`.
 */
int32_t
pp_protolens_fuse (
    uint32_t chain,
    uint32_t * out_handle);
/** \brief
 *  Instantiate a protolens chain at a specific schema.
 *
 *  `chain` is a [`Resource::ProtolensChain`](crate::handle::Resource)
 *  handle; `schema` is a [`Resource::Schema`](crate::handle::Resource)
 *  handle. On success, `out_handle` receives a fresh
 *  [`Resource::MigrationWithSchemas`](crate::handle::Resource) handle.
 *  Calls `ProtolensChain::instantiate`.
 */
int32_t
pp_protolens_instantiate (
    uint32_t chain,
    uint32_t schema,
    uint32_t * out_handle);
/** \brief
 *  List all built-in semantic protocol names.
 *
 *  On success, `out` receives a CBOR-encoded `Vec<String>`. Calls
 *  [`crate::api::helpers::builtin_protocol_names`].
 */
int32_t
pp_registry_list_builtin (
    Vec_uint8_t * out);