bindings/haskell/src/Panproto/Rust/FFI.hsc


-- | Coverage report for a migration over a CBOR @Vec\<WInstance\>@.
foreign import ccall safe "pp_mig_coverage_at"
    pp_mig_coverage_at
        :: Word32 -> Word32 -> Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Lift raw-JSON data through a migration, given a UTF-8 root vertex.
foreign import ccall safe "pp_mig_lift_json_at"
    pp_mig_lift_json_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- ---------------------------------------------------------------------------
-- Hom search

-- | Find candidate schema morphisms (CBOR @SearchOptions@ in).
foreign import ccall safe "pp_hom_find_morphisms_at"
    pp_hom_find_morphisms_at
        :: Word32 -> Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Find the single best schema morphism.
foreign import ccall safe "pp_hom_find_best_morphism_at"
    pp_hom_find_best_morphism_at
        :: Word32 -> Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Find the maximum span between two schemas (CBOR @SearchOptions@ and
-- @DomainConstraints@ in, CBOR @SchemaSpan@ out). The third handle is
-- the protocol the induced apex is validated against.
foreign import ccall safe "pp_hom_find_span_at"
    pp_hom_find_span_at
        :: Word32
        -> Word32
        -> Word32
        -> Ptr Word8
        -> CSize
        -> Ptr Word8
        -> CSize
        -> Ptr VecU8
        -> IO CInt

-- | Read a CBOR span's apex as the CBOR @SchemaOverlap@ a pushout takes.
foreign import ccall safe "pp_hom_span_to_overlap_at"
    pp_hom_span_to_overlap_at :: Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Convert a CBOR found-morphism into a fresh migration handle.
foreign import ccall safe "pp_hom_morphism_to_migration_at"
    pp_hom_morphism_to_migration_at :: Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | Induce a schema morphism from a CBOR theory morphism.
foreign import ccall safe "pp_hom_induce_schema_morphism_at"
    pp_hom_induce_schema_morphism_at :: Ptr Word8 -> CSize -> Word32 -> Ptr VecU8 -> IO CInt

-- | Induce a migration from a CBOR theory morphism, returning both the
-- CBOR schema morphism and a fresh migration handle.
foreign import ccall safe "pp_hom_induce_migration_from_theory_at"
    pp_hom_induce_migration_from_theory_at
        :: Ptr Word8 -> CSize -> Word32 -> Word32 -> Ptr VecU8 -> Ptr Word32 -> IO CInt

-- ---------------------------------------------------------------------------
-- Instance

-- | Validate a CBOR instance against a schema handle.
foreign import ccall safe "pp_inst_validate_at"
    pp_inst_validate_at :: Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Render a CBOR instance as JSON.
foreign import ccall safe "pp_inst_to_json_at"
    pp_inst_to_json_at :: Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Parse raw JSON into a CBOR instance, given a UTF-8 root vertex.
foreign import ccall safe "pp_inst_json_to_instance_at"
    pp_inst_json_to_instance_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Count the nodes in a CBOR instance.
foreign import ccall safe "pp_inst_element_count_at"
    pp_inst_element_count_at :: Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- ---------------------------------------------------------------------------
-- Registry / I-O

-- | Create the default protocol registry handle.
foreign import ccall safe "pp_io_register_protocols"
    pp_io_register_protocols :: Ptr Word32 -> IO CInt

-- | CBOR @Vec\<String\>@ of registered protocol names.
foreign import ccall safe "pp_io_list_protocols"
    pp_io_list_protocols :: Word32 -> Ptr VecU8 -> IO CInt

-- | Parse raw-format input into a CBOR instance using a named protocol.
foreign import ccall safe "pp_io_parse_instance_at"
    pp_io_parse_instance_at
        :: Word32 -> Ptr Word8 -> CSize -> Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Emit a CBOR instance to its raw format using a named protocol.
foreign import ccall safe "pp_io_emit_instance_at"
    pp_io_emit_instance_at
        :: Word32 -> Ptr Word8 -> CSize -> Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | CBOR @Vec\<String\>@ of built-in protocol names.
foreign import ccall safe "pp_registry_list_builtin"
    pp_registry_list_builtin :: Ptr VecU8 -> IO CInt

-- | Look up a built-in protocol by UTF-8 name, returning CBOR @Protocol@.
foreign import ccall safe "pp_registry_get_builtin_at"
    pp_registry_get_builtin_at :: Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- ---------------------------------------------------------------------------
-- Lens

-- | Auto-generate a protolens chain between two schemas.
foreign import ccall safe "pp_lens_auto_generate_protolens_at"
    pp_lens_auto_generate_protolens_at
        :: Word32 -> Word32 -> Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | Auto-generate candidate protolenses with scores.
foreign import ccall safe "pp_lens_auto_generate_candidates_at"
    pp_lens_auto_generate_candidates_at
        :: Word32 -> Word32 -> Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Check both lens laws over a CBOR instance.
foreign import ccall safe "pp_lens_check_laws_at"
    pp_lens_check_laws_at :: Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Check the get-put law over a CBOR instance.
foreign import ccall safe "pp_lens_check_get_put_at"
    pp_lens_check_get_put_at :: Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Check the put-get law over a CBOR instance.
foreign import ccall safe "pp_lens_check_put_get_at"
    pp_lens_check_put_get_at :: Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Run @get@ on a CBOR record, returning CBOR @{ view, complement }@.
foreign import ccall safe "pp_lens_get_record_at"
    pp_lens_get_record_at :: Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Run @put@ on a CBOR view plus complement, returning a CBOR record.
foreign import ccall safe "pp_lens_put_record_at"
    pp_lens_put_record_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Compose two compiled lenses into a fresh migration-with-schemas handle.
foreign import ccall safe "pp_lens_compose"
    pp_lens_compose :: Word32 -> Word32 -> Ptr Word32 -> IO CInt

-- | Instantiate a protolens chain at a schema, returning a fresh handle.
foreign import ccall safe "pp_protolens_instantiate"
    pp_protolens_instantiate :: Word32 -> Word32 -> Ptr Word32 -> IO CInt

-- | CBOR complement spec for a protolens chain at a schema.
foreign import ccall safe "pp_protolens_complement_spec_at"
    pp_protolens_complement_spec_at :: Word32 -> Word32 -> Ptr VecU8 -> IO CInt

-- | Build a protolens chain from a CBOR diff spec between two schemas.
foreign import ccall safe "pp_protolens_from_diff_at"
    pp_protolens_from_diff_at
        :: Ptr Word8 -> CSize -> Word32 -> Word32 -> Ptr Word32 -> IO CInt

-- | Concatenate two protolens chains into a fresh handle.
foreign import ccall safe "pp_protolens_compose"
    pp_protolens_compose :: Word32 -> Word32 -> Ptr Word32 -> IO CInt

-- | Render a protolens chain as JSON.
foreign import ccall safe "pp_protolens_chain_to_json"
    pp_protolens_chain_to_json :: Word32 -> Ptr VecU8 -> IO CInt

-- | Build a protolens chain from raw JSON.
foreign import ccall safe "pp_protolens_from_json_at"
    pp_protolens_from_json_at :: Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | Fuse a protolens chain's steps into a fresh handle.
foreign import ccall safe "pp_protolens_fuse"
    pp_protolens_fuse :: Word32 -> Ptr Word32 -> IO CInt

-- | Auto-derive a symmetric lens between two schemas.
foreign import ccall safe "pp_lens_symmetric_from_schemas"
    pp_lens_symmetric_from_schemas :: Word32 -> Word32 -> Ptr Word32 -> IO CInt

-- | Sync through a symmetric lens. @direction@ is @0@ (left to right)
-- or @1@ (right to left).
foreign import ccall safe "pp_lens_symmetric_sync_at"
    pp_lens_symmetric_sync_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Word8 -> Ptr VecU8 -> IO CInt

-- | Compile a UTF-8 lens-DSL document into a fresh protolens chain.
foreign import ccall safe "pp_lens_compile_document_at"
    pp_lens_compile_document_at
        :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- ---------------------------------------------------------------------------
-- GAT

-- | Create a theory from a CBOR spec, returning a fresh handle.
foreign import ccall safe "pp_gat_create_theory_at"
    pp_gat_create_theory_at :: Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | Colimit (pushout) of two theory handles over a shared handle.
foreign import ccall safe "pp_gat_colimit"
    pp_gat_colimit :: Word32 -> Word32 -> Word32 -> Ptr Word32 -> IO CInt

-- | Check a CBOR theory morphism between two theory handles.
foreign import ccall safe "pp_gat_check_morphism_at"
    pp_gat_check_morphism_at :: Ptr Word8 -> CSize -> Word32 -> Word32 -> Ptr VecU8 -> IO CInt

-- | Reindex a CBOR model along a CBOR theory morphism.
foreign import ccall safe "pp_gat_migrate_model_at"
    pp_gat_migrate_model_at
        :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Construct the free model of a theory handle under an optional CBOR
-- config, returning a fresh model handle.
foreign import ccall safe "pp_gat_free_model_at"
    pp_gat_free_model_at :: Word32 -> Ptr Word8 -> CSize -> Ptr Word32 -> IO CInt

-- | Check a model handle against a theory handle, returning a CBOR
-- @Vec\<String\>@ of equation-violation descriptions.
foreign import ccall safe "pp_gat_check_model"
    pp_gat_check_model :: Word32 -> Word32 -> Ptr VecU8 -> IO CInt

-- | Evaluate an operation in a model handle: the UTF-8 op name and a CBOR
-- @Vec\<ModelValue\>@ of arguments go in, the resulting CBOR 'ModelValue'
-- comes back.
foreign import ccall safe "pp_gat_eval_in_model_at"
    pp_gat_eval_in_model_at
        :: Word32 -> Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Emit a model handle's full carrier as a CBOR
-- @HashMap\<String, Vec\<ModelValue\>\>@ (its @sort_interp@).
foreign import ccall safe "pp_gat_model_sort_interp"
    pp_gat_model_sort_interp :: Word32 -> Ptr VecU8 -> IO CInt

-- | Serialize the theory behind a handle to its CBOR @Theory@ shape.
foreign import ccall safe "pp_gat_serialize_theory"
    pp_gat_serialize_theory :: Word32 -> Ptr VecU8 -> IO CInt

-- ---------------------------------------------------------------------------
-- Expression / query

-- | Parse UTF-8 expression source into a CBOR @Expr@.
foreign import ccall safe "pp_expr_parse_at"
    pp_expr_parse_at :: Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Evaluate a CBOR @Expr@ in a CBOR environment.
foreign import ccall safe "pp_expr_eval_func_at"
    pp_expr_eval_func_at
        :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Evaluate a CBOR @Term@ in a CBOR environment against a theory handle.
foreign import ccall safe "pp_expr_eval_gat_at"
    pp_expr_eval_gat_at
        :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Word32 -> Ptr VecU8 -> IO CInt

-- | Typecheck a CBOR @Term@ against a theory handle and CBOR context.
foreign import ccall safe "pp_expr_check_at"
    pp_expr_check_at
        :: Ptr Word8 -> CSize -> Word32 -> Ptr Word8 -> CSize -> Ptr VecU8 -> IO CInt

-- | Execute a CBOR query over a CBOR instance against a schema handle.
foreign import ccall safe "pp_query_execute_at"
    pp_query_execute_at
        :: Ptr Word8 -> CSize -> Ptr Word8 -> CSize -> Word32 -> Ptr VecU8 -> IO CInt

-- ---------------------------------------------------------------------------
-- Enriched
